--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta http-equiv='X-UA-Compatible' content='chrome=1'></meta>
 <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
-<title>Titulo pestaña</title>
+<title>¿Relieve de la diosa Ishtar?</title>
 <script type='text/javascript' src='https://www.x3dom.org/download/x3dom.js'> </script>
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
 <h1>Cabecera página</h1>
 <p>
-    Texto previo
+    Oriente Medio, Siglo XIX a. C. - siglo XVIII a. C., British Museum, Londres.
 </p>
 <x3d width='1000px' height='1000px'>
 <scene>
@@ -20,7 +20,7 @@
 </scene>
 </x3d>
 <p>
-    Texto final
+     
 </p>
   </body>
 </html>
