--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta http-equiv='X-UA-Compatible' content='chrome=1'></meta>
 <meta http-equiv='Content-Type' content='text/html;charset=utf-8'></meta>
-<title> ¿Relieve de la diosa Ishtar? </title>
+<title> British Museum, ¿Relieve de la diosa Ishtar? </title>
 <script type='text/javascript' src='https://www.x3dom.org/download/x3dom.js'> </script>
 <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'/>
 </head>
 <body>
-<h1>Cabecera página</h1>
+<h1>¿Relieve de la diosa Ishtar?</h1>
 <p>
     Oriente Medio, Siglo XIX a. C. - siglo XVIII a. C., British Museum, Londres.
 </p>
